Sat Dec 15 23:58:45 2007 - Andras Mantia <amantia@kde.org>
    o return the result of a division in floating form if the result is not an integer.
      Changed the behavior in both the old and new parser.

Wed Nov 28 13:21:34 2007 - Andras Mantia <amantia@kde.org>
    o do not set array values when the assignment is in a code path which shouldn't be executed

Tue Nov 20 20:03:34 2007 - Andras Mantia <amantia@kde.org>
    o show the checked function for RadioButton widgets in the function browser

Fri Oct 19 16:08:32 2007 - Andras Mantia <amantia@kde.org>
	o make CheckBox.setChecked accept as argument false, "false", true, "true",
 	  0 (meaning false), everything else (meaning true)

Sat Oct 6 17:53:47 2007 - Andras Mantia <amantia@kde.org>
	o make multiplying work correctly for floating point values
	o do not remove the whole text after undoing the changes in the editor [#147817]
	o don't crash if opening a file the second time when the first try failed [#141110]
	o don't close the dialogs with ESC (just like in real applications)
	o fix ExecButton.setEnabled() [#113624]
	o use icon instead of "..." in the file selector [#109985]
	o make @echo really work [#138705]
	o add DCOP method to get the winID [#111161]
	o add DCOP method to change the cursor to the wait cursor and back [#109630]

Thu Sep 14 20:01:18 2006 - Michal Rudolf <mrudolf@kdewebdev.org>
(actually imported from a work branch on Sep 29, 2007 by Andras Mantia <amantia@kde.org>)
	o function str_findrev works now
	o fix crash when diving by zero
  	o make function names case insensitive
  	o fix dcop() function (external DCOP) in new parser
	o add missing EOLs to array_values()
  	o don't open files with no filename given
  	o fix crash on incorrect syntax in new parser
  	o fix input_file() function
  	o add switch/case to new parser
  	o fix importing tables with empty cells
  	o Kommander 1.3.0 (development branch) released

Thu Sep 7 20:01:18 2006 - Andras Mantia <amantia@kde.org>