@@ -1,3 +1,4 @@
 kmdr_editordir = ${kde_datadir}/kommander/pics
 
 kmdr_editor_DATA = kommandersplash.png
+
