@@ -1,0 +1,121 @@
+/* XPM */
+static char *datepicker[] = {
+/* columns rows colors chars-per-pixel */
+"22 22 93 2",
+"   c black",
+".  c gray1",
+"X  c #060606",
+"o  c gray3",
+"O  c #0B0B0B",
+"+  c #131313",
+"@  c #151515",
+"#  c #191919",
+"$  c gray10",
+"%  c #1B1B1B",
+"&  c #1D1D1D",
+"*  c #280000",
+"=  c #002129",
+"-  c #00222B",
+";  c #00232B",
+":  c #00232C",
+">  c #00242D",
+",  c gray14",
+"<  c gray15",
+"1  c #3A3A3A",
+"2  c #3C3C3C",
+"3  c #0F3944",
+"4  c #205766",
+"5  c #485356",
+"6  c gray36",
+"7  c #596061",
+"8  c #6C6C6C",
+"9  c gray44",
+"0  c #C01D1D",
+"q  c #C83939",
+"w  c #D05555",
+"e  c #D87272",
+"r  c #0061AC",
+"t  c #7F8B8E",
+"y  c #5595CB",
+"u  c #72A7D4",
+"i  c #808080",
+"p  c gray53",
+"a  c #8E8E8E",
+"s  c #929292",
+"d  c #929EA1",
+"f  c #AAAAAA",
+"g  c #A3AFB2",
+"h  c #A7ADB2",
+"j  c #A6B2B5",
+"k  c #A7B3B6",
+"l  c #A9B5B8",
+"z  c #B0B1B0",
+"x  c #B1B1B0",
+"c  c #B1B1B1",
+"v  c #B2B2B2",
+"b  c #B6B6B6",
+"n  c #B0B6BB",
+"m  c #B9B9B9",
+"M  c #B9BABB",
+"N  c #BFB8BF",
+"B  c #DF8E8E",
+"V  c #E7AAAA",
+"C  c #8DB7D8",
+"Z  c #8EB8DC",
+"A  c #B8BFC5",
+"S  c #AACAE5",
+"D  c #C2C3C4",
+"F  c #C8CFD0",
+"G  c #CAD4DC",
+"H  c gray82",
+"J  c #D0D6D7",
+"K  c #D1D8D9",
+"L  c #D2D9DA",
+"P  c gainsboro",
+"I  c #EAC1C1",
+"U  c #EFC7C7",
+"Y  c #E7D2D2",
+"T  c #EFDADA",
+"R  c #C7DCEE",
+"E  c #DDE9F3",
+"W  c #E1E2E3",
+"Q  c gray90",
+"!  c #E6E6E6",
+"~  c gray91",
+"^  c #E9E9E9",
+"/  c gray92",
+"(  c #EEEEEE",
+")  c #F7E3E3",
+"_  c #E3EDF6",
+"`  c #F3F3F3",
+"'  c #F4F4F4",
+"]  c gray98",
+"[  c #FBFBFB",
+"{  c gray99",
+"}  c #FEFEFE",
+"|  c gray100",
+" . c None",
+/* pixels */
+" . . .3 > > > > > > > > > > > > > > 3  . . .",
+" .4 > 5 1 < % $ $ $ $ $ $ $ $ # @ , 8 > 4  .",
+" .> 5 8 , + | 2 o o o o | 2 o o X & m d >  .",
+"3 5 8 m & O P 6         P 6     i s ( } l 3 ",
+"> 7 a ( s p z   i i i 9 N   i i i m | | K > ",
+"> 8 f ] | | .   ] I T '   * Y / ^ ( | | [ > ",
+"> 8 b | | | | | | w w | | 0 V | | | | | ` > ",
+"> 8 b | | r r | | w w | U q V | r r | | W : ",
+"> 8 b | r r r | | w B U e e V | r r r E A - ",
+"> 8 b C r r r | | w ) e q V V | r r r C h = ",
+"> 8 b | C r r | | w | w e V V | r r C | D = ",
+"> 8 b x x C C x | U | U ) ) ) x C C x x ~ ; ",
+"> 8 b | | | | x | _ _ | _ S _ x | | | | G ; ",
+"> 8 b | | | | x | y S | y S y x | | | | n = ",
+"> 8 b x x x x x R Z S x R | y x x x x x M = ",
+"> 8 b | | | | x | S S | | R u x | | | | H - ",
+"> 8 b | | | | x | S S | _ u | x | | | | Q : ",
+"> 7 v { | | | x | S S | y S S x | | | | F > ",
+"3 5 c x x x x x x _ _ x S S S x x x x ! j 3 ",
+" .> t | | | | x | | | | | | | x | | ^ g >  .",
+" .4 > l L | | x | | | | | | | x } J k > 3  .",
+" . . .3 > > > > > > > > > > > > > > 3  . . ."
+};
