@@ -1,3 +1,8 @@
+Thu Dec 20 00:38:31 2007 - Andras Mantia <amantia@kde.org>
+    o insert the functions using the syntax of the new parser if #!kommander 
+      is specified in the associated text 
+    o add DatePicker widget
+
 Sat Dec 15 23:58:45 2007 - Andras Mantia <amantia@kde.org>
     o return the result of a division in floating form if the result is not an integer.
       Changed the behavior in both the old and new parser.
